# openwebui-token-tracking

./: .buildinfo  MANIFEST.in  README.md  TODO.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js
.doctrees/: api.doctree  environment.pickle  index.doctree  readme.doctree
.doctrees/api/: actions.doctree  credit_groups.doctree  db.doctree  model_pricing.doctree  models.doctree  pipes.doctree  settings.doctree  sponsored.doctree  tracking.doctree  user.doctree
.github/workflows/: docs.yml  pytest.yml
_modules/: index.html
_modules/openwebui_token_tracking/: credit_groups.html  model_pricing.html  models.html  settings.html  sponsored.html  tracking.html  user.html
_modules/openwebui_token_tracking/actions/: credit_balance.html
_modules/openwebui_token_tracking/db/: credit_group.html  db.html  model_pricing.html  settings.html  sponsored.html  token_usage.html  user.html
_modules/openwebui_token_tracking/pipes/: anthropic.html  base_tracked_pipe.html  google_genai.html  mistral.html  openai.html
_sources/: index.rst.txt
_sources/api/: actions.rst.txt  db.rst.txt  model_pricing.rst.txt  models.rst.txt  pipes.rst.txt  sponsored.rst.txt  tracking.rst.txt  user.rst.txt
api/: actions.html  credit_groups.html  db.html  model_pricing.html  models.html  pipes.html  settings.html  sponsored.html  tracking.html  user.html
docs/source/: api.rst  conf.py  index.rst
docs/source/api/: credit_groups.rst  settings.rst
src/dartmouth_chat_accounting/: __init__.py  accounting.py
src/openwebui_token_tracking/: __init__.py  accounting.py  credit_groups.py  db.py  models.py  sponsored.py  tracking.py
src/openwebui_token_tracking/cli/: main.py
test/: fixtures.py  test_accounting.py  test_credit_groups.py  test_tracking.py
(+18 files in other folders)
